--- a/requirements_py3.8.txt
+++ b/requirements_py3.8.txt
@@ -1,8 +1,7 @@
-joblib==1.0.1
-matplotlib==3.3.4
-numpy==1.20.1
-pandas==1.2.4
-pytest==7.4.2
-scikit_learn==0.24.1
-seaborn==0.11.2
+scikit-learn==0.24.1
 shap==0.40.0
+joblib==1.0.1
+pandas==1.2.4
+numpy==1.20.1
+matplotlib==3.3.4
+seaborn==0.11.2
